@@ -1,3 +1,10 @@
+2007-01-30  Benoît Dejean  <benoit@placenet.org>
+
+	* src/proctable.cpp:
+	
+	Set a min width for the Command Line column.
+	Closes #328287.
+
 2007-01-29  Benoît Dejean  <benoit@placenet.org>
 
 	* src/callbacks.cpp:
